Add authentication controller
