# routes/api.php
@@ -3,13 +3,8 @@
 declare(strict_types=1);
 
 use App\Helpers\Routes\RouteHelper;
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 Route::prefix('v1')->group(function () {
     RouteHelper::includeRouteFiles(__DIR__ . '/api/v1');
-});
-
-Route::middleware(['auth:sanctum'])->get('/user', function (Request $request) {
-    return $request->user();
 });
